Fixed several bugs reported by the FindBugs tool. Also added the output file of FindBugs after applying the fixes.